etc/tests/error/type/inferred-comparison-param.ny
;; expect: cannot assign string literal to int
use std.core

fn small(x){
   x < 10
}

print(small("x"))
